# bi-agent

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agent/skills/design-md/: DESIGN.md  README.md  SKILL.md
.agent/skills/fluid-responsive/: SKILL.md
.agent/skills/fluid-responsive/references/: fluid-layout-rules.md
.agent/skills/frontend-design/: .openskills.json  SKILL.md
.agent/skills/react-codex/: .openskills.json  SKILL.md
.agent/skills/vercel-react-best-practices/: .openskills.json  AGENTS.md  SKILL.md
.agent/skills/vercel-react-best-practices/rules/: advanced-event-handler-refs.md  advanced-init-once.md  advanced-use-latest.md  async-api-routes.md  async-defer-await.md  async-dependencies.md  async-suspense-boundaries.md  bundle-barrel-imports.md  bundle-conditional.md  bundle-defer-third-party.md  (+32 more)
apps/api/: pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  main.py  storage.py
apps/api/app/routers/: screens.py  uploads.py
apps/api/app/scripts/: init_database.py
apps/api/app/services/agent/: graph.py  llm.py
apps/api/app/services/datasets/: __init__.py  field_compiler.py  profile.py  query_executor.py  query_planner.py  types.py
apps/api/app/services/screens/: __init__.py  catalog.py  compiler.py  generator.py  templates.py  types.py
apps/web/: .oxfmtrc.json  .oxlintrc.json  README.md  components.json  next.config.ts  package.json
docs/: dashboard-layout-guidelines.md  dataset-agent-design.md  dataset-driven-screen-generation.md  screen-editor-requirements.md
(+64 files in other folders)
